Replace Stream Collection, and Introduce Dedicated Exceptions Refactor AssignmentService to Use Constructor Injection,
This PR implements three key improvements to AssignmentService:

Constructor Injection

Removed all field injections (@Autowired) for AssignmentRepository, CourseRepository, and AssignmentMapper.

Introduced a single constructor that validates non‐null for each dependency and assigns them to private final fields.

Stream.toList() Usage

Replaced .collect(Collectors.toList()) with .toList() when mapping entities to DTOs in getAllAssignments().

Ensured that the returned list is unmodifiable as per Java 16+ behavior.