@@ -1,28 +1,42 @@
-package net.java.lms_backend.service;
+package net.java.lms_backend.Service;
 
-import net.java.lms_backend.repositrory.AssignmentRepository;
-import net.java.lms_backend.repositrory.CourseRepository;
+import net.java.lms_backend.Repositrory.AssignmentRepository;
+import net.java.lms_backend.Repositrory.CourseRepository;
 import net.java.lms_backend.dto.AssignmentDTO;
 import net.java.lms_backend.entity.Assignment;
+import net.java.lms_backend.entity.Course;
+import net.java.lms_backend.exception.AssignmentNotFoundException;
+import net.java.lms_backend.exception.CourseNotFoundException;
 import net.java.lms_backend.mapper.AssignmentMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AssignmentService {
 
+    private final AssignmentRepository assignmentRepository;
+    private final CourseRepository courseRepository;
+    private final AssignmentMapper assignmentMapper;
 
-    @Autowired
-    private AssignmentRepository assignmentRepository;
-
-    @Autowired
-    private CourseRepository courseRepository;
-
-    @Autowired
-    private AssignmentMapper assignmentMapper;
+    public AssignmentService(
+            AssignmentRepository assignmentRepository,
+            CourseRepository courseRepository,
+            AssignmentMapper assignmentMapper
+    ) {
+        if (assignmentRepository == null) {
+            throw new IllegalArgumentException("AssignmentRepository cannot be null");
+        }
+        if (courseRepository == null) {
+            throw new IllegalArgumentException("CourseRepository cannot be null");
+        }
+        if (assignmentMapper == null) {
+            throw new IllegalArgumentException("AssignmentMapper cannot be null");
+        }
+        this.assignmentRepository = assignmentRepository;
+        this.courseRepository = courseRepository;
+        this.assignmentMapper = assignmentMapper;
+    }
 
     // Create a new assignment
     public AssignmentDTO createAssignment(AssignmentDTO dto) {
@@ -34,28 +48,30 @@ public class AssignmentService {
     // Get an assignment by ID
     public AssignmentDTO getAssignmentById(Long id) {
         Assignment assignment = assignmentRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Assignment not found with id: " + id));
+                .orElseThrow(() -> new AssignmentNotFoundException("Assignment not found with id: " + id));
         return assignmentMapper.toDTO(assignment);
     }
 
     // Get all assignments
     public List<AssignmentDTO> getAllAssignments() {
+        // Stream.toList() returns an unmodifiable List as of Java 16+
         return assignmentRepository.findAll().stream()
                 .map(assignmentMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Update an assignment by ID
     public AssignmentDTO updateAssignment(Long id, AssignmentDTO dto) {
         Assignment assignment = assignmentRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Assignment not found with id: " + id));
+                .orElseThrow(() -> new AssignmentNotFoundException("Assignment not found with id: " + id));
 
         // Update assignment properties
         assignment.setTitle(dto.getTitle());
         assignment.setDueDate(java.time.LocalDate.parse(dto.getDueDate()));
         if (dto.getCourseId() != null) {
-            assignment.setCourse(courseRepository.findById(dto.getCourseId())
-                    .orElseThrow(() -> new IllegalArgumentException("Invalid course ID: " + dto.getCourseId())));
+            Course course = courseRepository.findById(dto.getCourseId())
+                    .orElseThrow(() -> new CourseNotFoundException("Invalid course ID: " + dto.getCourseId()));
+            assignment.setCourse(course);
         }
 
         Assignment updatedAssignment = assignmentRepository.save(assignment);
@@ -65,7 +81,7 @@ public class AssignmentService {
     // Delete an assignment by ID
     public void deleteAssignment(Long id) {
         if (!assignmentRepository.existsById(id)) {
-            throw new IllegalArgumentException("Assignment not found with id: " + id);
+            throw new AssignmentNotFoundException("Assignment not found with id: " + id);
         }
         assignmentRepository.deleteById(id);
     }
